objects/Sales_Discovery_Site__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Customer Site Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Sales Discovery Sites</relationshipLabel>
        <relationshipName>Sales_Discovery_Sites</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Proposed_Solutions_Completed_Date__c</fullName>
        <label>Proposed Solutions Completed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Proposed_Solutions_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Proposed Solutions Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_Discovery_Completed_Date__c</fullName>
        <label>Sales Discovery Completed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Sales_Discovery_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check when Sales Rep has completed their portion of Sales Discovery document.</inlineHelpText>
        <label>Sales Discovery Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_Discovery_Completion_Date__c</fullName>
        <formula>IF( Sales_Discovery_Completed__c ==true, NOW(), null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Discovery Completion Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Sales_Discovery__c</fullName>
        <label>Sales Discovery</label>
        <referenceTo>Sales_Discovery__c</referenceTo>
        <relationshipLabel>Sales Discovery Sites</relationshipLabel>
        <relationshipName>Sales_Discovery_Sites</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Site_Address__c</fullName>
        <label>Site Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_City__c</fullName>
        <label>Site City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_State__c</fullName>
        <label>Site State</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Walk_Technician__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Site Walk Technician</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.UserRole.Name</field>
                <operation>contains</operation>
                <value>Site Walk Technician</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Sales_Discovery_Site3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Technical_Site_Walk_Completed_Date__c</fullName>
        <label>Technical Site Walk Completed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Technical_Site_Walk_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Technical Site Walk Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Virtual_Discovery_Completed_Date__c</fullName>
        <label>Virtual Discovery Completed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Virtual_Discovery_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Virtual Discovery Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Virtual_Discovery_Specialist__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Virtual Discovery Specialist</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.UserRole.Name</field>
                <operation>contains</operation>
                <value>Virtual Discovery Specialist</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Sales_Discovery_Site4</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Sales Discovery Site</label>
    <nameField>
        <displayFormat>Site-{000}</displayFormat>
        <label>Discovery Site ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Discovery Sites</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Cannot_Assign_Sitewalk_Technician</fullName>
        <active>true</active>
        <description>Cannot_Assign_Sitewalk_Technician when not approved</description>
        <errorConditionFormula>AND(NOT(ISBLANK(  Site_Walk_Technician__c )),  Sales_Discovery__r.Approve_Site_Walk__c == false)</errorConditionFormula>
        <errorDisplayField>Site_Walk_Technician__c</errorDisplayField>
        <errorMessage>Site Walk needs to be approved by DOS before assigning a technician.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cannot_mark_Sitewalk_completed</fullName>
        <active>true</active>
        <description>Cannot_mark_Sitewalk_completed when no technician assigned</description>
        <errorConditionFormula>AND(ISBLANK(  Site_Walk_Technician__c ), Technical_Site_Walk_Completed__c == true)</errorConditionFormula>
        <errorDisplayField>Technical_Site_Walk_Completed__c</errorDisplayField>
        <errorMessage>A Technician needs to be assigned for the Site Walk Discovery before it can be marked as completed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cannot_mark_Virtual_completed</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISBLANK( Virtual_Discovery_Specialist__c ),Virtual_Discovery_Completed__c == true)</errorConditionFormula>
        <errorDisplayField>Virtual_Discovery_Completed__c</errorDisplayField>
        <errorMessage>A Specialist needs to be assigned for the Virtual Discovery before it can be marked as complete.</errorMessage>
    </validationRules>
</CustomObject>